--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>ericrowan.com</title>
   </head>
   <body>
-    <p>BRB&hellip;;</p>
+    <p><strike>hello</strike>, world&hellip;</p>
   </body>
 </html>
