--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>ericrowan.com</title>
+    <title>👋</title>
   </head>
   <body>
-    <p>Now or never.</p>
+    <p>BRB...maybe.</p>
   </body>
 </html>
