--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <span id="loading">...</span>
     </p>
     <p>
-      <span id="timestamp">...</span>
+      <span id="timestamp"></span>
     </p>
   </body>
   <script>
