--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title>👋</title>
   </head>
   <body>
-    <p>BRB
-      <span id="loading">...</span>
-    </p>
+    <p>BRB<span id="loading">...</span></p>
     <p>
       <span id="timestamp"></span>
     </p>
   </body>
+
+
   <script>
+    // Animated ellipsis
     function displayAnimatedEllipsis () {
       const dots = document.getElementById("loading");
       let currentDot = 0;
@@ -25,9 +26,9 @@
 
     displayAnimatedEllipsis();
 
+    // Current date & time
     function displayCurrentDateAndTime() {
       const date = new Date();
-      const dateTime = document.getElementById("timestamp");
     
       if (Intl.DateTimeFormat().resolvedOptions().timeZone) {
         const userTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
@@ -44,7 +45,8 @@
         const formattedDate = date.toLocaleDateString('en-US', options);
         const formattedTime = date.toLocaleTimeString('en-US', options);
         const combined = `${formattedDate} ${formattedTime}`;
-        console.log(combined);
+        // console.log(combined);
+        document.getElementById("timestamp");
       } else {
         console.log("User's time zone unavailable. Consider alternative methods.");
       }
