--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="utf-8" />
-    <title id="loading">...✌️</title>
+    <title id="loading">...</title>
 </head>
 <body>
     <p>BRB<span id="loading">...</span></p>
