--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8" />
-  <title id=""loading>...</title>
+  <title id="loading">✌️</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script> 
 </head>
