--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8" />
-  <title class="loading">✌️</title>
+  <title>✌️</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script> 
 </head>
 <body>
-  <p>BRB<span class="loading">...</span></p>
+  <p>ericrowan.com is on hiatus<span id="loading">...</span></p>
   <p id="timestamp-container"></p>
 </body>
 </html>
