--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="script.js"></script> 
 </head>
 <body>
-  <p>ericrowan.com is on hiatus<span id="loading">...</span></p>
+  <p>This website is on hiatus<span id="loading">...</span></p>
   <p id="timestamp-container"></p>
 </body>
 </html>
