--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <script src="script.js"></script> 
 </head>
 <body>
-  <p>This website is on hiatus<span id="loading">...</span></p>
-  <p id="timestamp-container"></p>
+  <div class="container">
+    <p>This website is on hiatus<span id="loading">...</span></p>
+    <p id="timestamp-container"></p>
+  </div>
 </body>
 </html>
