--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8" />
-  <title>✌️</title>
+  <title>✌️ ericrowan.com</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script> 
 </head>
 <body>
   <div class="container">
-    <p>This website is on hiatus<span id="loading">...</span></p>
+    <p>This website is on hiatus.</p>
     <p id="timestamp-container"></p>
   </div>
 </body>
